<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <ImageView
        android:id="@+id/backMovieDetailFragmentIV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backMovieDetailFragmentIV" />

    <ImageView
        android:id="@+id/posterDetailFragmentIV"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionDetailFragmentTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18ssp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/dataDescriptionDetailFragmentTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp"
        android:text="Set after the fall of the Empire and before the emergence of the First Order, we follow the travails of a lone gunfighter in the outer reaches of the galaxy far from the authority of the New Republic."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionDetailFragmentTV" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backMovieDetailFragmentIV" />

    <TextView
        android:id="@+id/titleMovieDetailFragmentTV"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:text="Rick and Morty"
        android:textSize="@dimen/_16ssp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@+id/posterDetailFragmentIV"
        app:layout_constraintTop_toTopOf="@+id/posterDetailFragmentIV"
        android:layout_marginLeft="@dimen/_10ssp" />

    <TextView
        android:id="@+id/dateMovieDetailFragmentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/titleMovieDetailFragmentTV"
        app:layout_constraintTop_toBottomOf="@+id/titleMovieDetailFragmentTV" />

    <TextView
        android:id="@+id/voteDetailFragmentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote"
        android:textSize="@dimen/_18ssp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:layout_marginRight="@dimen/_10sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>